[package]
name = "scbl-utils"
version = "0.1.3"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.98"
bon = "3.6.3"
calamine = "0.27.0"
camino = { version = "1.1.9", features = ["serde1"] }
clap = { version = "4.5.37", features = ["derive", "env", "wrap_help"] }
csv = "1.3.1"
dotenvy = "0.15.7"
futures = "0.3.31"
itertools = "0.14.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", default-features = false, features = [
    "http2",
    "json",
    "rustls-tls",
    "charset",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "fs",
] }
toml = "0.8.22"

[dev-dependencies]
pretty_assertions = "1.4.1"
